Added Adaptive WW module infrastructure
Bug: 12751
(cherry picked from commit 9d44a160b3da2722ea2ab4fcf0a8079eb4ff0cdc)

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,5 @@
 !/configs/summit_supplicant*_defconfig
 !/configs/sterling_supplicant*_defconfig
 !/configs/mfg*_defconfig
+!/configs/adaptive_ww*_defconfig
 # note the above is necessary to avoid customer configs.
