--- a/package/lrd-closed-source/Config.in
+++ b/package/lrd-closed-source/Config.in
@@ -12,3 +12,4 @@ source "package/lrd-closed-source/laird_firmware/Config.in"
 source "package/lrd-closed-source/wl_fmac/Config.in"
 source "package/lrd-closed-source/mfg60n/Config.in"
 source "package/lrd-closed-source/nordic_ota/Config.in"
+source "package/lrd-closed-source/adaptive_ww/Config.in"
