buildroot:decouple summit supplicant binaries version from build number
This reverts commit c946a983dcb2d3ef324f3831c0e38b50902aa24a.

Bug 14104

--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -19,5 +19,6 @@ source "package/lrd/lora-gateway-bridge/Config.in"
 source "package/lrd/demo-gui/Config.in"
 source "package/lrd/easycwmp/Config.in"
 source "package/lrd/summit-supplicant-binaries/Config.in"
+source "package/lrd/wb50sysd-summit-supplicant-binaries/Config.in"
 source "package/lrd/lrd-automount/Config.in"
 source "package/lrd/lrd-usbgadget/Config.in"
