--- a/package/lrd/summit-supplicant-binaries/Config.in
+++ b/package/lrd/summit-supplicant-binaries/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES
-	bool "Summit Supplicant ARM EABIHF Binaries Installer"
+	bool "SOM60 Summit Supplicant ARM EABIHF Binaries Installer"
 	select BR2_PACKAGE_SDCSUPP if BR2_LRD_DEVEL_BUILD="y"
 	select BR2_PACKAGE_SDCSUPP_WPA_CLI if BR2_LRD_DEVEL_BUILD="y"
 
