config version number in the menu instead of make file
Default version number is "7.0.0.52".

Bug 14463

--- a/configs/som60sd_defconfig
+++ b/configs/som60sd_defconfig
@@ -173,11 +173,13 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.52"
 BR2_PACKAGE_OPENSSL_FIPS=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.52"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
