--- a/package/linux-backports/Config.in
+++ b/package/linux-backports/Config.in
@@ -27,6 +27,9 @@ config BR2_PACKAGE_LINUX_BACKPORTS_USE_CUSTOM_CONFIG
 
 endchoice
 
+config BR2_PACKAGE_LINUX_BACKPORTS_VERSION_VALUE
+	string "backports version"
+
 config BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG
 	string "Defconfig name"
 	depends on BR2_PACKAGE_LINUX_BACKPORTS_USE_DEFCONFIG
