--- a/package/lrd/wb50sysd-summit-supplicant-binaries/Config.in
+++ b/package/lrd/wb50sysd-summit-supplicant-binaries/Config.in
@@ -4,3 +4,10 @@ config BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES
 
 	help
 	  Extracts sdcsupp, wpa_cli binaries from summit_supplicant-arm release and install them on the target.
+
+if BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES
+
+config BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE
+	string "wb50sysd summit supplicant binaries version"
+
+endif
