Config supplicant binaries version in the menu
Bug 14463

--- a/configs/som60sd_mfg_defconfig
+++ b/configs/som60sd_mfg_defconfig
@@ -102,6 +102,7 @@ BR2_PACKAGE_LRD_WIRELESS_REGDB=y
 BR2_PACKAGE_OPENSSL_FIPS=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.52"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
