--- a/configs/msd50n_defconfig
+++ b/configs/msd50n_defconfig
@@ -21,6 +21,7 @@ BR2_ROOTFS_STATIC_DEVICE_TABLE=""
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/msd50n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/msd50n/post_image.sh"
 # BR2_PACKAGE_BUSYBOX is not set
+BR2_PACKAGE_LIBOPENSSL_1_0_2=y
 BR2_PACKAGE_LIBEDIT=y
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_TARGET_ROOTFS_TAR_BZIP2=y
