--- a/configs/sterling_supplicant-arm_defconfig
+++ b/configs/sterling_supplicant-arm_defconfig
@@ -21,6 +21,7 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="sterling_supplicant-arm"
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_LIBOPENSSL_1_0_2=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
 BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
