--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -3,6 +3,7 @@ source "package/lrd/msd-binaries/Config.in"
 source "package/lrd/firmware-binaries/Config.in"
 source "package/lrd/lrd-wireless-regdb/Config.in"
 source "package/lrd/openssl-fips/Config.in"
+source "package/lrd/fips-check/Config.in"
 source "package/lrd/mc-mint/Config.in"
 source "package/lrd/eventmon/Config.in"
 source "package/lrd/fswatch/Config.in"
