Added fips-check utiltiy to buildroot
Bug 14364

--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -5,6 +5,7 @@ source "package/lrd/som60-firmware-binaries/Config.in"
 source "package/lrd/wb50n-firmware-binaries/Config.in"
 source "package/lrd/lrd-wireless-regdb/Config.in"
 source "package/lrd/openssl-fips/Config.in"
+source "package/lrd/fips-check/Config.in"
 source "package/lrd/mc-mint/Config.in"
 source "package/lrd/eventmon/Config.in"
 source "package/lrd/fswatch/Config.in"
