buildroot:decouple firmware binaries version from build number
ath6003/ath6004 and som60 firmware are seperated from the package
and WB50 sysd and SOM60 targets now are able to use different versions.

The rest firmwares still roll with the versioning script.

Bug 14105

--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -1,6 +1,8 @@
 source "package/lrd/patchram/Config.in"
 source "package/lrd/msd-binaries/Config.in"
 source "package/lrd/firmware-binaries/Config.in"
+source "package/lrd/som60-firmware-binaries/Config.in"
+source "package/lrd/wb50n-firmware-binaries/Config.in"
 source "package/lrd/lrd-wireless-regdb/Config.in"
 source "package/lrd/openssl-fips/Config.in"
 source "package/lrd/fips-check/Config.in"
