config version number in the menu instead of make file
Default is 0.0.0.0

Bug 14463

--- a/package/linux-backports/Config.in
+++ b/package/linux-backports/Config.in
@@ -27,6 +27,10 @@ config BR2_PACKAGE_LINUX_BACKPORTS_USE_CUSTOM_CONFIG
 
 endchoice
 
+config BR2_PACKAGE_LINUX_BACKPORTS_VERSION_VALUE
+	string "backports version"
+	default "0.0.0.0"
+
 config BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG
 	string "Defconfig name"
 	depends on BR2_PACKAGE_LINUX_BACKPORTS_USE_DEFCONFIG
