--- a/package/lrd/wb50n-firmware-binaries/Config.in
+++ b/package/lrd/wb50n-firmware-binaries/Config.in
@@ -6,6 +6,10 @@ config BR2_PACKAGE_WB50N_FIRMWARE_BINARIES
 
 if BR2_PACKAGE_WB50N_FIRMWARE_BINARIES
 
+config BR2_PACKAGE_WB50N_FIRMWARE_BINARIES_VERSION_VALUE
+	string "wb50n firmware binaries version"
+	default "0.0.0.0"
+
 config BR2_FIRMWARE_BINARIES_ATH6K_6003
 	bool "Laird ath6k AR6003 radio firmware"
     default n
