Fix systemd config after buildroot 2019.02 upgrade
Bug 14468

--- a/configs/wb60sd_defconfig
+++ b/configs/wb60sd_defconfig
@@ -79,6 +79,7 @@ BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/som60/configs/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
+BR2_PACKAGE_SYSTEMD_FIRSTBOOT=y
 BR2_PACKAGE_SYSTEMD_HIBERNATE=y
 # BR2_PACKAGE_SYSTEMD_HWDB is not set
 BR2_PACKAGE_SYSTEMD_LOGIND=y
@@ -86,6 +87,7 @@ BR2_PACKAGE_SYSTEMD_LOGIND=y
 # BR2_PACKAGE_SYSTEMD_NETWORKD is not set
 # BR2_PACKAGE_SYSTEMD_RESOLVED is not set
 # BR2_PACKAGE_SYSTEMD_TIMESYNCD is not set
+# BR2_PACKAGE_SYSTEMD_VCONSOLE is not set
 BR2_PACKAGE_UTIL_LINUX_HWCLOCK=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
