--- a/configs/wb60sd_defconfig
+++ b/configs/wb60sd_defconfig
@@ -13,7 +13,6 @@ BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
 BR2_TARGET_GENERIC_HOSTNAME="summit"
 BR2_TARGET_GENERIC_ISSUE="Laird"
-BR2_TARGET_GENERIC_PASSWD_SHA256=y
 BR2_INIT_SYSTEMD=y
 BR2_ROOTFS_DEVICE_TABLE="board/laird/device_table.txt"
 BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
@@ -31,6 +30,9 @@ BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
+BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_VERSION_VALUE="7.0.0.73"
+BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="summit60"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_OFONO=y
 BR2_PACKAGE_SETSERIAL=y
@@ -102,10 +104,12 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_OPENSSL_FIPS=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER_MODEM_MANAGER=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER_PPPD=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_LRD_USBGADGET=y
