--- a/configs/bdimx6_defconfig
+++ b/configs/bdimx6_defconfig
@@ -35,6 +35,7 @@ BR2_PACKAGE_IMX_GPU_VIV_GMEM_INFO=y
 BR2_PACKAGE_KERNEL_MODULE_IMX_GPU_VIV=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="bdimx6"
 BR2_PACKAGE_PCIUTILS=y
 BR2_PACKAGE_UBOOT_TOOLS=y
