--- a/configs/ig60sd_defconfig
+++ b/configs/ig60sd_defconfig
@@ -18,7 +18,6 @@ BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
 BR2_TARGET_GENERIC_HOSTNAME="summit"
 BR2_TARGET_GENERIC_ISSUE="Laird"
-BR2_TARGET_GENERIC_PASSWD_SHA256=y
 BR2_INIT_SYSTEMD=y
 BR2_ROOTFS_DEVICE_TABLE="board/laird/device_table.txt"
 BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
@@ -72,6 +71,9 @@ BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
+BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_VERSION_VALUE="7.0.0.73"
+BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="summit60"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_RNG_TOOLS=y
 BR2_PACKAGE_SETSERIAL=y
@@ -173,12 +175,13 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_PACKAGE_FIRMWARE_BINARIES=y
-BR2_FIRMWARE_BINARIES_SOM60=y
-BR2_PACKAGE_OPENSSL_FIPS=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
