--- a/configs/som60sd_defconfig
+++ b/configs/som60sd_defconfig
@@ -66,6 +66,9 @@ BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
+BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_VERSION_VALUE="7.0.0.73"
+BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="summit60"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_SREDIRD=y
@@ -168,12 +171,12 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
-BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.52"
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
-BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.52"
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
