--- a/configs/regCypress-arm-eabiaarch64_defconfig
+++ b/configs/regCypress-arm-eabiaarch64_defconfig
@@ -1,4 +1,5 @@
-BR2_arm=y
+BR2_aarch64=y
+BR2_ARM_FPU_VFPV4D16=y
 BR2_WGET="wget --passive-ftp -nd"
 BR2_DL_DIR="$(TOPDIR)/../archive"
 BR2_JLEVEL=16
@@ -6,19 +7,20 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-sdc-linux-gnueabi"
-BR2_TOOLCHAIN_EXTERNAL_GCC_4_5=y
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_0=y
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="aarch64-buildroot-linux-gnu"
+BR2_TOOLCHAIN_EXTERNAL_GCC_5=y
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_10=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
 BR2_TOOLCHAIN_EXTERNAL_CXX=y
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="$(TOPDIR)/board/laird/skeleton-empty"
 BR2_INIT_NONE=y
 BR2_ROOTFS_DEVICE_TABLE=""
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/reglwb/post_build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/reglwb/post_image.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/regCypress/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/regCypress/post_image.sh"
 # BR2_PACKAGE_BUSYBOX is not set
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_LAIRD_FIRMWARE=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4343_MFG=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4339_MFG=y
 BR2_PACKAGE_WL_FMAC=y
