--- a/configs/som60sd_mfg_defconfig
+++ b/configs/som60sd_mfg_defconfig
@@ -23,6 +23,8 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/som60/post_image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="som60sd_mfg"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="som60"
+BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
+BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_som60sd_mfg"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
