--- a/configs/wb50nsd_sysd_defconfig
+++ b/configs/wb50nsd_sysd_defconfig
@@ -23,6 +23,8 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb50n_sysd/post_image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="wb50nsd_sysd"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb50n_sysd"
+BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
+BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb50n_sysd"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
