Implement Read-Only Boot on nand flash images of som60/wb60 (Continue)
Demo to encrypt /data/secret.

Bug Bug 14490

--- a/board/laird/som60/rootfs-additions/etc/systemd/system/mount_data.service
+++ b/board/laird/som60/rootfs-additions/etc/systemd/system/mount_data.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Mount Data Partition
 DefaultDependencies=false
-Before=NetworkManager.service
+Wants=fskey.service
+After=fskey.service
 
 [Service]
 Type=oneshot
