Revert "Implement Read-Only Boot on nand flash images of som60/wb60 (Continue)"
This reverts commit 74fedbf9507d4499d445ce9da15acba34ce2bf05.

--- a/board/laird/som60/rootfs-additions/etc/systemd/system/mount_data.service
+++ b/board/laird/som60/rootfs-additions/etc/systemd/system/mount_data.service
@@ -1,8 +1,7 @@
 [Unit]
 Description=Mount Data Partition
 DefaultDependencies=false
-Wants=fskey.service
-After=fskey.service
+Before=NetworkManager.service
 
 [Service]
 Type=oneshot
