Add a new package lrd-secure-fs
Implement Read-Only Boot and secure fs som60/wb60/wb50n_sysd targets.

Bug 14490

--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -25,3 +25,4 @@ source "package/lrd/summit-supplicant-binaries/Config.in"
 source "package/lrd/wb50sysd-summit-supplicant-binaries/Config.in"
 source "package/lrd/lrd-automount/Config.in"
 source "package/lrd/lrd-usbgadget/Config.in"
+source "package/lrd/lrd-encrypted-storage-toolkit/Config.in"
