Add a new package lrd-encrypted-storage-toolkit
Implement Read-Only Boot and secure fs som60/wb60/wb50n_sysd targets.

Bug 14490

--- a/configs/som60_defconfig
+++ b/configs/som60_defconfig
@@ -38,6 +38,7 @@ BR2_PACKAGE_NETPERF=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_TRACE_CMD=y
 BR2_PACKAGE_WHETSTONE=y
+BR2_PACKAGE_FSCRYPTCTL=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
@@ -100,6 +101,7 @@ BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
+BR2_PACKAGE_KEYUTILS=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/som60/configs/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
@@ -140,3 +142,4 @@ BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
