--- a/configs/wb50n_sysd_defconfig
+++ b/configs/wb50n_sysd_defconfig
@@ -29,6 +29,7 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb50n_sysd"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_BZIP2=y
+BR2_PACKAGE_FSCRYPTCTL=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
@@ -71,6 +72,7 @@ BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
+BR2_PACKAGE_KEYUTILS=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/som60/configs/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
@@ -109,3 +111,4 @@ BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
