--- a/configs/wb60_defconfig
+++ b/configs/wb60_defconfig
@@ -28,6 +28,7 @@ BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_wb60"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
+BR2_PACKAGE_FSCRYPTCTL=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
@@ -73,6 +74,7 @@ BR2_PACKAGE_NETSTAT_NAT=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
+BR2_PACKAGE_KEYUTILS=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/som60/configs/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
@@ -115,3 +117,4 @@ BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_USB is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
