som60sd_mfg: Add sterling firmware support
Add buildroot config option to include sterling sdio/uart firmware along with SOM60 firmware.  Add this option to som60sd_mfg package.

Bug: 14661
(cherry picked from commit e68bbfb341f21f0bf105693c6a9882d4d8611fc6)

--- a/package/lrd/som60-firmware-binaries/Config.in
+++ b/package/lrd/som60-firmware-binaries/Config.in
@@ -10,4 +10,9 @@ if BR2_PACKAGE_SOM60_FIRMWARE_BINARIES
 config BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE
 	string "som60 firmware binaries version"
 	default "0.0.0.0"
+
+config BR2_PACKAGE_SOM60_ST_SDIO_UART_FIRMWARE_BINARIES
+	bool "som60 SDIO UART Firmware Installer"
+	help
+      Extracts the Laird Sterling SDIO/UART wireless firmware binary from a firmware release and installs it on the target in addition to the normal SOM60 firmware.
 endif
