Added som60x2 som60x2sd som60x2sd_mfg targets, renamed ig60sd
These targets are for SOM60 double RAM and Flash module variant
Converted IG60 target to the new structure

Bug 14667

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 !/configs/bdimx6_defconfig
 !/configs/backports_defconfig
 !/configs/som60*_defconfig
+!/configs/ig60*_defconfig
 !/configs/firmware_defconfig
 !/configs/summit_supplicant*_defconfig
 !/configs/sterling_supplicant*_defconfig
