--- a/configs/ig60llsd_defconfig
+++ b/configs/ig60llsd_defconfig
@@ -22,11 +22,11 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/som60/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/som60/post_image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="som60sd"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_DEFCONFIG="ig60sd"
+BR2_LINUX_KERNEL_DEFCONFIG="ig60ll"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-ig60sd"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-ig60ll"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_BZIP2=y
 BR2_PACKAGE_GDB=y
@@ -105,7 +105,7 @@ BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="ig60sd"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="ig60llsd"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_ITB=y
@@ -118,7 +118,7 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_PACKAGE_FIRMWARE_BINARIES=y
-BR2_FIRMWARE_BINARIES_SOM60=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
