--- a/configs/ig60sd-wbx3_defconfig
+++ b/configs/ig60sd-wbx3_defconfig
@@ -10,18 +10,13 @@ BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_OPTIMIZE_3=y
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/som60/som60-local.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-buildroot-linux-gnueabihf"
-BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_1=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
-BR2_TOOLCHAIN_EXTERNAL_CXX=y
-BR2_TARGET_GENERIC_HOSTNAME=""
-BR2_TARGET_GENERIC_ISSUE=""
-BR2_TARGET_GENERIC_PASSWD_SHA256=y
+BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
+BR2_TARGET_GENERIC_HOSTNAME="summit"
+BR2_TARGET_GENERIC_ISSUE="Laird"
 BR2_INIT_NONE=y
 BR2_ROOTFS_DEVICE_TABLE=""
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
+BR2_SYSTEM_BIN_SH_NONE=y
 # BR2_TARGET_GENERIC_GETTY is not set
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 # BR2_ENABLE_LOCALE_PURGE is not set
@@ -41,10 +36,7 @@ BR2_TARGET_UBOOT_SPL=y
 BR2_TARGET_UBOOT_SPL_NAME="spl/u-boot-spl-nodtb.bin spl/u-boot-spl.dtb"
 BR2_PACKAGE_HOST_CRYPTSETUP=y
 BR2_PACKAGE_HOST_GENIMAGE=y
-BR2_PACKAGE_HOST_MKPASSWD=y
 BR2_PACKAGE_HOST_MTD=y
-BR2_PACKAGE_HOST_PRELINK_CROSS=y
-BR2_PACKAGE_HOST_QEMU=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
