--- a/configs/som60x2_defconfig
+++ b/configs/som60x2_defconfig
@@ -20,14 +20,17 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/som60/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/som60/post_image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="som60sd"
+BR2_ROOTFS_POST_SCRIPT_ARGS="som60"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_DEFCONFIG="ig60sd"
+BR2_LINUX_KERNEL_DEFCONFIG="som60"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-ig60sd"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_som60x2"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
+BR2_PACKAGE_ALSA_UTILS=y
+BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_BZIP2=y
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_LSOF=y
@@ -35,14 +38,16 @@ BR2_PACKAGE_NETPERF=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_TRACE_CMD=y
 BR2_PACKAGE_WHETSTONE=y
+BR2_PACKAGE_FSCRYPTCTL=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
+BR2_PACKAGE_SREDIRD=y
+BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
-BR2_PACKAGE_LUA=y
 BR2_PACKAGE_PYTHON3_GOBJECT=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
@@ -50,9 +55,7 @@ BR2_PACKAGE_CRYPTODEV=y
 BR2_PACKAGE_LIBSSH=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LIBCONFIG=y
-BR2_PACKAGE_CJSON=y
 BR2_PACKAGE_JSON_C=y
-BR2_PACKAGE_LIBXMLPP=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBTIRPC=y
 BR2_PACKAGE_GOBJECT_INTROSPECTION=y
@@ -79,19 +82,29 @@ BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_IPSEC_TOOLS=y
+# BR2_PACKAGE_IPSEC_TOOLS_STATS is not set
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
+BR2_PACKAGE_NDISC6=y
+BR2_PACKAGE_NDISC6_NAME2ADDR=y
+BR2_PACKAGE_NDISC6_NDISC6=y
+BR2_PACKAGE_NDISC6_RDISC6=y
+BR2_PACKAGE_NDISC6_RDNSSD=y
+BR2_PACKAGE_NDISC6_RLTRACEROUTE6=y
+BR2_PACKAGE_NDISC6_TCPTRACEROUTE6=y
+BR2_PACKAGE_NDISC6_TCPSPRAY=y
 BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NETSTAT_NAT=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
+BR2_PACKAGE_KEYUTILS=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/som60/configs/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
-BR2_PACKAGE_SYSTEMD_FIRSTBOOT=y
 BR2_PACKAGE_SYSTEMD_HIBERNATE=y
 # BR2_PACKAGE_SYSTEMD_HWDB is not set
 BR2_PACKAGE_SYSTEMD_LOGIND=y
@@ -101,11 +114,14 @@ BR2_PACKAGE_SYSTEMD_LOGIND=y
 # BR2_PACKAGE_SYSTEMD_TIMESYNCD is not set
 # BR2_PACKAGE_SYSTEMD_VCONSOLE is not set
 BR2_PACKAGE_UTIL_LINUX_HWCLOCK=y
+BR2_TARGET_ROOTFS_SQUASHFS=y
+BR2_TARGET_ROOTFS_SQUASHFS4_LZO=y
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="ig60sd"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="som60x2"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_ITB=y
@@ -118,13 +134,11 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_PACKAGE_FIRMWARE_BINARIES=y
-BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
-BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.73"
+BR2_FIRMWARE_BINARIES_SOM60=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
-BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
-# BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
