--- a/configs/wb50n_rdvk_defconfig
+++ b/configs/wb50n_rdvk_defconfig
@@ -68,6 +68,7 @@ BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DNSMASQ_DNSSEC=y
+BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF=y
@@ -96,7 +97,6 @@ BR2_PACKAGE_NETSTAT_NAT=y
 BR2_PACKAGE_NTP=y
 # BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_NTP_NTPDATE=y
-BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_PROFTPD=y
 BR2_PACKAGE_RSYNC=y
