--- a/configs/ig60llsd_defconfig
+++ b/configs/ig60llsd_defconfig
@@ -39,6 +39,8 @@ BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
+BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="summit60"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
@@ -91,7 +93,6 @@ BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/som60/configs/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
-BR2_PACKAGE_SYSTEMD_FIRSTBOOT=y
 BR2_PACKAGE_SYSTEMD_HIBERNATE=y
 # BR2_PACKAGE_SYSTEMD_HWDB is not set
 BR2_PACKAGE_SYSTEMD_LOGIND=y
@@ -117,7 +118,6 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
-BR2_PACKAGE_FIRMWARE_BINARIES=y
 BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
 BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.73"
 BR2_PACKAGE_MC_MINT=y
