--- a/configs/som60x2sd_defconfig
+++ b/configs/som60x2sd_defconfig
@@ -68,6 +68,8 @@ BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
+BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="summit60"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_SREDIRD=y
@@ -168,8 +170,7 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
-BR2_PACKAGE_FIRMWARE_BINARIES=y
-BR2_FIRMWARE_BINARIES_SOM60=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
