--- a/package/lrd/som60-firmware-binaries/Config.in
+++ b/package/lrd/som60-firmware-binaries/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_SOM60_FIRMWARE_BINARIES
-	bool "som60 Firmware Installer"
+	bool "SOM60 Firmware Installer"
 	select BR2_PACKAGE_LAIRD_FIRMWARE if BR2_LRD_DEVEL_BUILD="y"
 	select BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SOM60 if BR2_LRD_DEVEL_BUILD="y"
 	select BR2_PACKAGE_LRD_WIRELESS_REGDB if BR2_LRD_DEVEL_BUILD="y"
@@ -8,11 +8,11 @@ config BR2_PACKAGE_SOM60_FIRMWARE_BINARIES
 
 if BR2_PACKAGE_SOM60_FIRMWARE_BINARIES
 config BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE
-	string "som60 firmware binaries version"
+	string "SOM60 firmware binaries version"
 	default "0.0.0.0"
 
 config BR2_PACKAGE_SOM60_ST_SDIO_UART_FIRMWARE_BINARIES
-	bool "som60 SDIO UART Firmware Installer"
+	bool "SOM60 Sterling Firmware Installer"
 	help
       Extracts the Laird Sterling SDIO/UART wireless firmware binary from a firmware release and installs it on the target in addition to the normal SOM60 firmware.
 endif
