bdimx6:switch to use laird-arm external toolchain
Bug 14598

--- a/configs/bdimx6_defconfig
+++ b/configs/bdimx6_defconfig
@@ -7,6 +7,7 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/boundarydevices/bdimx6-local.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
+BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
 BR2_TOOLCHAIN_EXTERNAL_GDB_SERVER_COPY=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TARGET_GENERIC_GETTY_PORT="ttymxc1"
