Buildroot: add backport regression test to build targets
Add a backports-test package to do regression test.
It is independent to linux-backports and linux kernel.

Bug 14779

--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,5 @@
 !/configs/sterling_supplicant*_defconfig
 !/configs/mfg*_defconfig
 !/configs/adaptive_ww*_defconfig
+!/configs/backports-test_defconfig
 # note the above is necessary to avoid customer configs.
