Boot performance improvements
- Removed unneeded share remapping
- Removed unneeded scripts and simplified others

Bug 14749

--- a/package/lrd/lrd-encrypted-storage-toolkit/rootfs/etc/systemd/system/mount_data.service
+++ b/package/lrd/lrd-encrypted-storage-toolkit/rootfs/etc/systemd/system/mount_data.service
@@ -7,6 +7,9 @@ After=fskey.service
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/sbin/mount_data.sh
-ExecStop=umount /data
+ExecStart=/usr/sbin/mount_data.sh start
+ExecStop=/usr/sbin/mount_data.sh stop
 KeyringMode=inherit
+
+[Install]
+WantedBy=local-fs.target
