--- a/configs/som60x2_defconfig
+++ b/configs/som60x2_defconfig
@@ -17,6 +17,7 @@ BR2_INIT_SYSTEMD=y
 BR2_ROOTFS_DEVICE_TABLE="board/laird/device_table.txt"
 BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 # BR2_TARGET_GENERIC_GETTY is not set
+# BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/som60/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/som60/post_image.sh"
