--- a/package/lrd/lrd-encrypted-storage-toolkit/rootfs/etc/systemd/system/fskey.service
+++ b/package/lrd/lrd-encrypted-storage-toolkit/rootfs/etc/systemd/system/fskey.service
@@ -7,3 +7,6 @@ Type=oneshot
 RemainAfterExit=yes
 ExecStart=keyctl search %:_builtin_fs_keys logon fscrypt:ffffffffffffffff @us
 KeyringMode=inherit
+
+[Install]
+WantedBy=local-fs.target
