BZ14821: buildroot changes for Laird FIPS validation
Option to apply Laird FIPS validation patches to:
- openssl-fips-2.0.16
- openssl-1.0.2s

Build targets for laird fips:
- laird_openssl_fips
- laird_openssl_fips-binaries
- summit_supplicant_fips

Add laird openssl fips binaries to
the openssl virtual package.

Chages to summit-supplicant-binaries
to support fips binaries and other
architectures, and openssl versions.

Config changes for som60/wb50 fips.

Bug: 14821

--- a/package/lrd/openssl-fips/Config.in
+++ b/package/lrd/openssl-fips/Config.in
@@ -4,3 +4,8 @@ config BR2_PACKAGE_OPENSSL_FIPS
 	help
 	  Build FIPS support for openssl.
 	  http://www.openssl.org/
+config BR2_PACKAGE_LAIRD_OPENSSL_FIPS
+	bool "Laird openssl-fips version"
+	depends on BR2_PACKAGE_OPENSSL_FIPS
+	help
+	  Builds the Laird openssl-fips/openssl.
