--- a/package/openssl/Config.in
+++ b/package/openssl/Config.in
@@ -35,21 +35,11 @@ config BR2_PACKAGE_LIBOPENSSL_1_0_2
 	help
 		This is libopenssl-1.0.2, which support FIPS.
 
-if BR2_PACKAGE_LIBOPENSSL || BR2_PACKAGE_LIBOPENSSL_1_0_2
-
-config BR2_PACKAGE_LIBOPENSSL_BIN
-	bool "openssl binary"
+config BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES
+	bool "Laird openssl fips binaries"
+	select BR2_PACKAGE_ZLIB
 	help
-	  Install the openssl binary and the associated helper scripts
-	  to the target file system. This is a command line tool for
-	  doing various cryptographic stuff.
-
-config BR2_PACKAGE_LIBOPENSSL_ENGINES
-	bool "openssl additional engines"
-	help
-	  Install additional encryption engine libraries.
-
-endif
+		This is Laird openssl FIPS binaries (1.0.2).
 
 config BR2_PACKAGE_LIBRESSL
 	bool "libressl"
@@ -64,6 +54,33 @@ config BR2_PACKAGE_LIBRESSL
 
 	  http://www.libressl.org/
 
+endchoice
+
+if BR2_PACKAGE_LIBOPENSSL || BR2_PACKAGE_LIBOPENSSL_1_0_2 || BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES
+
+config BR2_PACKAGE_LIBOPENSSL_BIN
+	bool "openssl binary"
+	help
+	  Install the openssl binary and the associated helper scripts
+	  to the target file system. This is a command line tool for
+	  doing various cryptographic stuff.
+endif
+
+if BR2_PACKAGE_LIBOPENSSL || BR2_PACKAGE_LIBOPENSSL_1_0_2
+config BR2_PACKAGE_LIBOPENSSL_ENGINES
+	bool "openssl additional engines"
+	help
+	  Install additional encryption engine libraries.
+
+endif
+
+if BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES
+config BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES_VERSION_VALUE
+	string "Laird Openssl FIPS binaries version"
+	default "0.0.0.0"
+
+endif
+
 if BR2_PACKAGE_LIBRESSL
 
 config BR2_PACKAGE_LIBRESSL_BIN
@@ -74,8 +91,6 @@ config BR2_PACKAGE_LIBRESSL_BIN
 
 endif
 
-endchoice
-
 config BR2_PACKAGE_HAS_OPENSSL
 	bool
 
@@ -84,6 +99,7 @@ config BR2_PACKAGE_PROVIDES_OPENSSL
 	default "libopenssl"  if BR2_PACKAGE_LIBOPENSSL
 	default "libopenssl_1_0_2"  if BR2_PACKAGE_LIBOPENSSL_1_0_2
 	default "libressl"  if BR2_PACKAGE_LIBRESSL
+	default "laird_openssl_fips-binaries"  if BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES
 
 endif
 
