--- a/configs/som60sd_fips_defconfig
+++ b/configs/som60sd_fips_defconfig
@@ -43,6 +43,7 @@ BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_VERSION_VALUE="7.0.0.101"
 BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="summit60"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
@@ -53,7 +54,9 @@ BR2_PACKAGE_PYTHON3_GOBJECT=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CRYPTODEV=y
-BR2_PACKAGE_LIBOPENSSL_1_0_2=y
+BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES_VERSION_VALUE="7.0.0.101"
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LIBCONFIG=y
 BR2_PACKAGE_JSON_C=y
@@ -121,12 +124,13 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
-BR2_PACKAGE_OPENSSL_FIPS=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.101"
 BR2_PACKAGE_FIPS_CHECK=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.101"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
