--- a/configs/ig60llsd_defconfig
+++ b/configs/ig60llsd_defconfig
@@ -129,3 +129,4 @@ BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.101"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_IGCONFD=y
