--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -26,3 +26,4 @@ source "package/lrd/wb50sysd-summit-supplicant-binaries/Config.in"
 source "package/lrd/lrd-automount/Config.in"
 source "package/lrd/lrd-usbgadget/Config.in"
 source "package/lrd/lrd-encrypted-storage-toolkit/Config.in"
+source "package/lrd/igconfd/Config.in"
