--- a/configs/som60sd_defconfig
+++ b/configs/som60sd_defconfig
@@ -38,6 +38,7 @@ BR2_PACKAGE_NETPERF=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_TRACE_CMD=y
 BR2_PACKAGE_WHETSTONE=y
+BR2_PACKAGE_WIFI_TEST_SUITE=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_BITSTREAM_VERA=y
 BR2_PACKAGE_LIBERATION=y
