--- a/package/Config.in
+++ b/package/Config.in
@@ -135,6 +135,7 @@ menu "Debugging, profiling and benchmark"
 	source "package/valgrind/Config.in"
 	source "package/vmtouch/Config.in"
 	source "package/whetstone/Config.in"
+	source "package/wifi-test-suite/Config.in"
 endmenu
 
 menu "Development tools"
