--- a/configs/som60sd_fips_defconfig
+++ b/configs/som60sd_fips_defconfig
@@ -43,7 +43,7 @@ BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_LINUX_BACKPORTS=y
-BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="summit60"
+BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="som60"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_SREDIRD=y
