--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -26,4 +26,4 @@ source "package/lrd/lrd-usbgadget/Config.in"
 source "package/lrd/lrd-encrypted-storage-toolkit/Config.in"
 source "package/lrd/igconfd/Config.in"
 source "package/lrd/lrd-bt-utils/Config.in"
-
+source "package/lrd/igupd/Config.in"
