laird: Adding the IG Update Service to buildroot
Bug 14686

--- a/configs/ig60llsd_defconfig
+++ b/configs/ig60llsd_defconfig
@@ -44,12 +44,18 @@ BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_PYTHON3_GOBJECT=y
+BR2_PACKAGE_PYTHON_LIBCONFIG=y
+BR2_PACKAGE_PYTHON_PATHTOOLS=y
+BR2_PACKAGE_PYTHON_PSUTIL=y
+BR2_PACKAGE_PYTHON_PYUDEV=y
+BR2_PACKAGE_PYTHON_REQUESTS=y
+BR2_PACKAGE_PYTHON_SERIAL=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CRYPTODEV=y
 BR2_PACKAGE_LIBSSH=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
-BR2_PACKAGE_LIBCONFIG=y
+BR2_PACKAGE_CJSON=y
 BR2_PACKAGE_JSON_C=y
 BR2_PACKAGE_LIBXMLPP=y
 BR2_PACKAGE_LIBCURL=y
@@ -123,3 +129,4 @@ BR2_PACKAGE_LRD_USBGADGET=y
 BR2_PACKAGE_IGCONFD=y
 BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
 BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
+BR2_PACKAGE_IGUPD=y
