Removed weblcm from ig60ll and fixed igconfd buildroot make
Bug 14918

--- a/package/lrd/igconfd/Config.in
+++ b/package/lrd/igconfd/Config.in
@@ -1,5 +1,9 @@
 config BR2_PACKAGE_IGCONFD
 	bool "igconfd"
+	depends on BR2_PACKAGE_PYTHON || BR2_PACKAGE_PYTHON3
+	select BR2_PACKAGE_PYTHON_ZLIB if BR2_PACKAGE_PYTHON
+	select BR2_PACKAGE_PYTHON3_ZLIB if BR2_PACKAGE_PYTHON3
+	select BR2_PACKAGE_PYTHON_SYSTEMD
+	select BR2_PACKAGE_DBUS_PYTHON
 	help
 	  Laird Industrial Gateway Configuration Service
-	depends on BR2_PACKAGE_PYTHON || BR2_PACKAGE_PYTHON3
