Bug 14855: Added make file and config to add the btpa_utility to the ig60 build in buildroot

--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -27,3 +27,5 @@ source "package/lrd/lrd-automount/Config.in"
 source "package/lrd/lrd-usbgadget/Config.in"
 source "package/lrd/lrd-encrypted-storage-toolkit/Config.in"
 source "package/lrd/igconfd/Config.in"
+source "package/lrd/lrd-bt-utils/Config.in"
+
