Create a new menu for lrd radio stack
Have all radio packages in the same menu to simplify configuration:

1. Move all related packages to lrd/lrd-som60-radio/, including
summit supplcaint, som60-firmware-binaries and adaptive_ww-binaries;
2. Use BR2_PACKAGE_LRD_SOM60_RADIO_VERSION_VALUE for all radio
packages (including linux-backports)

Bug 14696

--- a/board/laird/Config.in
+++ b/board/laird/Config.in
@@ -26,6 +26,7 @@ menu "Laird"
 
     menu "Packages"
         source "package/lrd/Config.in"
+        source "package/lrd/lrd-som60-radio/Config.in"
     endmenu
 
     menu "Packages (Closed Source)"
