Synced som60x2 configs with som60
Bug 14667

--- a/configs/som60x2sd_defconfig
+++ b/configs/som60x2sd_defconfig
@@ -37,6 +37,7 @@ BR2_PACKAGE_NETPERF=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_TRACE_CMD=y
 BR2_PACKAGE_WHETSTONE=y
+BR2_PACKAGE_WIFI_TEST_SUITE=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_BITSTREAM_VERA=y
 BR2_PACKAGE_LIBERATION=y
@@ -169,11 +170,12 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
-BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
-BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE="7.0.0.114"
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
