--- a/configs/wb50n_rdvk_defconfig
+++ b/configs/wb50n_rdvk_defconfig
@@ -30,30 +30,22 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb50n_rdvk"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_BZIP2=y
-BR2_PACKAGE_GDB=y
 BR2_PACKAGE_LSOF=y
-BR2_PACKAGE_NETPERF=y
-BR2_PACKAGE_STRACE=y
-BR2_PACKAGE_TRACE_CMD=y
-BR2_PACKAGE_WHETSTONE=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_INPUT_EVENT_DAEMON=y
-BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
-BR2_PACKAGE_SREDIRD=y
 BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_USBMOUNT=y
+BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CRYPTODEV=y
 BR2_PACKAGE_LIBSSH=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
-BR2_PACKAGE_DTC=y
-BR2_PACKAGE_DTC_PROGRAMS=y
-BR2_PACKAGE_LIBDAEMON=y
+BR2_PACKAGE_LIBTIRPC=y
 BR2_PACKAGE_LIBEDIT=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
@@ -62,42 +54,26 @@ BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
 BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 BR2_PACKAGE_BRIDGE_UTILS=y
-BR2_PACKAGE_CONNTRACK_TOOLS=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DNSMASQ_DNSSEC=y
 BR2_PACKAGE_DROPBEAR=y
-BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPROUTE2=y
-BR2_PACKAGE_IPSEC_TOOLS=y
-# BR2_PACKAGE_IPSEC_TOOLS_STATS is not set
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
-BR2_PACKAGE_LRZSZ=y
-BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_NCFTP=y
 # BR2_PACKAGE_NCFTP_GET is not set
 # BR2_PACKAGE_NCFTP_PUT is not set
 # BR2_PACKAGE_NCFTP_LS is not set
 # BR2_PACKAGE_NCFTP_BATCH is not set
-BR2_PACKAGE_NDISC6=y
-BR2_PACKAGE_NDISC6_NAME2ADDR=y
-BR2_PACKAGE_NDISC6_NDISC6=y
-BR2_PACKAGE_NDISC6_RDISC6=y
-BR2_PACKAGE_NDISC6_RDNSSD=y
-BR2_PACKAGE_NDISC6_RLTRACEROUTE6=y
-BR2_PACKAGE_NDISC6_TCPTRACEROUTE6=y
-BR2_PACKAGE_NDISC6_TCPSPRAY=y
-BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NETSTAT_NAT=y
 BR2_PACKAGE_NTP=y
 # BR2_PACKAGE_NTP_NTPD is not set
 BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_PPPD=y
-BR2_PACKAGE_PROFTPD=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WGET=y
