60 Series: Add USB-USB firmware to WB50 RDVK
Bug: 14496

--- a/configs/wb50n_rdvk_defconfig
+++ b/configs/wb50n_rdvk_defconfig
@@ -117,6 +117,8 @@ BR2_PACKAGE_LAIRD_FIRMWARE_BCM4339=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_USB_UART=y
+BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_USB_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_SDIO_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_USB_UART=y
+BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_USB_USB=y
