--- a/board/laird/Config.in
+++ b/board/laird/Config.in
@@ -8,30 +8,54 @@ menu "Laird"
 	  so they should set this flag to directly build from the closed
 	  source repositories under package/lrd-closed-source/externals.
 
-    choice
-        prompt "Board"
+	menu "Radio Stack"
+	    choice
+			prompt "Radio Stack"
 
-        config BR2_LRD_PLATFORM_SOM60
-            bool "SOM60"
+			config BR2_LRD_NO_RADIO
+				bool "None"
 
-        config BR2_LRD_PLATFORM_WB50N
-            bool "WB50N"
+			config BR2_LRD_SOM60_RADIO
+				bool "SOM60 Radio"
 
-    endchoice
+			config BR2_LRD_SOM60_FIPS_RADIO
+				bool "SOM60 FIPS Radio"
 
-    config BR2_LRD_PLATFORM
-        string
-        default "som60"   if BR2_LRD_PLATFORM_SOM60
-        default "wb50n"   if BR2_LRD_PLATFORM_WB50N
+			config BR2_LRD_WB50N_SYSD_RADIO
+				bool "WB50N SYSD Radio"
 
-    menu "Packages"
-        source "package/lrd/Config.in"
-        source "package/lrd/lrd-som60-radio/Config.in"
+			config BR2_LRD_WB50N_SYSD_FIPS_RADIO
+				bool "WB50N SYSD FIPS_Radio"
+
+			config BR2_LRD_WB50N_LEGACY_RADIO
+				bool "WB50N Legacy Radio"
+		endchoice
+
+		config BR2_LRD_RADIO
+			string
+			default "None"   if BR2_LRD_NO_RADIO
+			default "SOM60 Radio"   if BR2_LRD_SOM60_RADIO
+			default "SOM60 FIPS Radio"   if BR2_LRD_SOM60_FIPS_RADIO
+			default "WB50N Sysd Radio"   if BR2_LRD_WB50N_SYSD_RADIO
+			default "WB50N Sysd FIPS Radio"   if BR2_LRD_WB50N_SYSD_FIPS_RADIO
+			default "WB50N Legacy Radio"   if BR2_LRD_WB50N_LEGACY_RADIO
+
+		comment "Please config openssl in Target packages->Libraries/Crypto/Openssl"
+		depends on !BR2_LRD_NO_RADIO
+		comment "Please config linux-backports in Target packages->Hardware handling->linux-backports"
+		depends on !BR2_LRD_NO_RADIO && !BR2_LRD_WB50N_LEGACY_RADIO
+
+		source "package/lrd/lrd-som60-radio/Config.in"
+		source "package/lrd/lrd-wb50sysd-radio/Config.in"
+		source "package/lrd/lrd-wb50legacy-radio/Config.in"
+	endmenu
+
+	menu "Packages"
+		source "package/lrd/Config.in"
     endmenu
 
-    menu "Packages (Closed Source)"
-        source "package/lrd-closed-source/Config.in"
-    endmenu
+	menu "Packages (Closed Source)"
+		source "package/lrd-closed-source/Config.in"
+	endmenu
 
 endmenu
-
