--- a/configs/bdimx6_defconfig
+++ b/configs/bdimx6_defconfig
@@ -54,6 +54,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
 BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
+BR2_PACKAGE_BRCM_PATCHRAM_PLUS=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_CONNTRACK_TOOLS=y
