--- a/configs/wb50n_rdvk_defconfig
+++ b/configs/wb50n_rdvk_defconfig
@@ -53,6 +53,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
 BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
+BR2_PACKAGE_BRCM_PATCHRAM_PLUS=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
@@ -105,7 +106,6 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_URL="git://git.denx.de/u-boot.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="524123a70761110c5cf3ccc5f52f6d4da071b959"
 BR2_TARGET_UBOOT_PATCH="$(TOPDIR)/board/laird/wb45n/patches/uboot-2014.07"
 BR2_LRD_PLATFORM_WB50N=y
-BR2_PACKAGE_PATCHRAM=y
 BR2_PACKAGE_LRD_WIRELESS_REGDB=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
