--- a/configs/som60x2_defconfig
+++ b/configs/som60x2_defconfig
@@ -135,12 +135,13 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
+BR2_LRD_SOM60_RADIO=y
+BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE="7.0.0.126"
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 BR2_PACKAGE_LRD_USBGADGET=y
 BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
-BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE="7.0.0.114"
-BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
-BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
