--- a/configs/wb50n_legacy_defconfig
+++ b/configs/wb50n_legacy_defconfig
@@ -118,7 +118,8 @@ BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="sama5d3xeknf_uboot"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
 BR2_TARGET_UBOOT_BOARDNAME="wb50n"
-BR2_LRD_PLATFORM_WB50N=y
+BR2_LRD_WB50N_LEGACY_RADIO=y
+BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE="7.0.0.126"
 BR2_PACKAGE_MSD_BINARIES=y
 BR2_MSD_BINARIES_COMPANY_PROJECT="laird"
 # BR2_MSD_BINARIES_LLAGENT is not set
