--- a/configs/wb50nsd_sysd_fips_defconfig
+++ b/configs/wb50nsd_sysd_fips_defconfig
@@ -32,6 +32,8 @@ BR2_PACKAGE_MTD=y
 BR2_PACKAGE_DEVMEM2=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
+BR2_PACKAGE_LINUX_BACKPORTS=y
+BR2_PACKAGE_LINUX_BACKPORTS_DEFCONFIG="wb50n"
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
@@ -42,7 +44,7 @@ BR2_PACKAGE_LIBSSH=y
 BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
-BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES_VERSION_VALUE="7.0.0.124"
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES_VERSION_VALUE="7.0.0.126"
 BR2_PACKAGE_LIBCONFIG=y
 BR2_PACKAGE_JSON_C=y
 BR2_PACKAGE_LIBCURL=y
@@ -100,14 +102,14 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
+BR2_LRD_WB50N_SYSD_FIPS_RADIO=y
+BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE="7.0.0.126"
 BR2_PACKAGE_WB50N_FIRMWARE_BINARIES=y
-BR2_PACKAGE_WB50N_FIRMWARE_BINARIES_VERSION_VALUE="7.0.0.114"
 BR2_FIRMWARE_BINARIES_ATH6K_6004=y
+BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_OPENSSL_FIPS=y
 BR2_PACKAGE_FIPS_CHECK=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
-BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES=y
-BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES_VERSION_VALUE="7.0.0.114"
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
