--- a/configs/bdimx6_defconfig
+++ b/configs/bdimx6_defconfig
@@ -129,8 +129,10 @@ BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_PCIE_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_PCIE_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_USB_UART=y
+BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_USB_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_SDIO_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_PCIE_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_PCIE_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_USB_UART=y
+BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_USB_USB=y
