--- a/configs/firmware_defconfig
+++ b/configs/firmware_defconfig
@@ -31,10 +31,12 @@ BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_PCIE_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_PCIE_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_USB_UART=y
+BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_USB_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_SDIO_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_PCIE_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_PCIE_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_USB_UART=y
+BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SU60_USB_USB=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_SOM60=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BT=y
