Update radio stack for wb50n and som60 builds
1.Update radio stack of som60 and wb50n builds;
2.Switch to backports drivers for wb50n sysd builds;

Bug 14986

--- a/configs/wb50n_legacy_defconfig
+++ b/configs/wb50n_legacy_defconfig
@@ -42,8 +42,6 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_INPUT_EVENT_DAEMON=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
-BR2_PACKAGE_CRYPTODEV=y
-BR2_PACKAGE_CRYPTODEV_LINUX=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_SREDIRD=y
 BR2_PACKAGE_STATSERIAL=y
@@ -52,17 +50,16 @@ BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_EXT_ZIP=y
 BR2_PACKAGE_PHP_EXT_JSON=y
+BR2_PACKAGE_CRYPTODEV=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LIBGUDEV=y
 BR2_PACKAGE_LIBNDP=y
 BR2_PACKAGE_LIBDAEMON=y
-BR2_PACKAGE_LIBEDIT=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_CONNTRACK_TOOLS=y
-BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_EBTABLES=y
@@ -103,6 +100,7 @@ BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_VPNC=y
 BR2_PACKAGE_WGET=y
+BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_PACKAGE_KMOD_TOOLS=y
@@ -118,11 +116,11 @@ BR2_TARGET_ROOTFS_UBIFS_LZO=y
 BR2_TARGET_AT91BOOTSTRAP3=y
 BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="sama5d3xeknf_uboot"
 BR2_TARGET_UBOOT=y
-BR2_TARGET_UBOOT_BOARDNAME="wb50n"
 BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
-BR2_LRD_PLATFORM_WB50N=y
+BR2_TARGET_UBOOT_BOARDNAME="wb50n"
+BR2_LRD_WB50N_LEGACY_RADIO=y
 BR2_PACKAGE_MSD_BINARIES=y
-BR2_MSD_BINARIES_COMPANY_PROJECT="laird"
+BR2_MSD_BINARIES_COMPANY_PROJECT="Laird"
 # BR2_MSD_BINARIES_LLAGENT is not set
 BR2_MSD_BINARIES_LAIRD_FIRMWARE_AR6004=y
 BR2_MSD_BINARIES_LAIRD_FIRMWARE_BT=y
