--- a/configs/wb60_defconfig
+++ b/configs/wb60_defconfig
@@ -108,6 +108,9 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
+BR2_LRD_SOM60_RADIO=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER_MODEM_MANAGER=y
@@ -116,5 +119,3 @@ BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_USB is not set
 BR2_PACKAGE_LRD_USBGADGET=y
 BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
-BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
-BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
