--- a/configs/som60sd_mfg_defconfig
+++ b/configs/som60sd_mfg_defconfig
@@ -95,12 +95,13 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
+BR2_LRD_SOM60_RADIO=y
+BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SOM60_ST_SDIO_UART_FIRMWARE_BINARIES=y
+BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
-BR2_PACKAGE_SOM60_FIRMWARE_BINARIES=y
-BR2_PACKAGE_SOM60_ST_SDIO_UART_FIRMWARE_BINARIES=y
-BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES=y
 BR2_PACKAGE_MFG60N=y
 BR2_PACKAGE_MFG60N_LRT=y
