Do force selection on radio stacks
Bug 15013

--- a/board/laird/Config.in
+++ b/board/laird/Config.in
@@ -17,18 +17,40 @@ menu "Laird"
 
 			config BR2_LRD_SOM60_RADIO
 				bool "SOM60 Radio"
+				select BR2_PACKAGE_SOM60_FIRMWARE_BINARIES
+				select BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES
+				select BR2_PACKAGE_LINUX_BACKPORTS
 
 			config BR2_LRD_SOM60_FIPS_RADIO
 				bool "SOM60 FIPS Radio"
+				select BR2_PACKAGE_SOM60_FIRMWARE_BINARIES
+				select BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES
+				select BR2_PACKAGE_LINUX_BACKPORTS
 
 			config BR2_LRD_WB50N_SYSD_RADIO
 				bool "WB50N SYSD Radio"
+				select BR2_PACKAGE_WB50N_FIRMWARE_BINARIES
+				select BR2_PACKAGE_WB50N_FIRMWARE_BINARIES_ATH6K_6004
+				select BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES
+				select BR2_PACKAGE_LINUX_BACKPORTS
 
 			config BR2_LRD_WB50N_SYSD_FIPS_RADIO
 				bool "WB50N SYSD FIPS_Radio"
+				select BR2_PACKAGE_WB50N_FIRMWARE_BINARIES
+				select BR2_PACKAGE_WB50N_FIRMWARE_BINARIES_ATH6K_6004
+				select BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES
+				select BR2_PACKAGE_LINUX_BACKPORTS
 
 			config BR2_LRD_WB50N_LEGACY_RADIO
 				bool "WB50N Legacy Radio"
+				select BR2_PACKAGE_MSD_BINARIES
+				select BR2_PACKAGE_MSD_BINARIES_WEBLCM
+				select BR2_PACKAGE_MSD_BINARIES_EVENTMON
+				select BR2_PACKAGE_MSD_BINARIES_SDCCLI
+				select BR2_PACKAGE_MSD_BINARIES_SDCSUPP
+				select BR2_PACKAGE_MSD_BINARIES_LAIRD_FIRMWARE_AR6004
+				select BR2_PACKAGE_MSD_BINARIES_LAIRD_FIRMWARE_BT
+				select BR2_PACKAGE_LINUX_BACKPORTS
 		endchoice
 
 		config BR2_LRD_RADIO
