--- a/package/lrd/lrd-wb50legacy-radio/msd-binaries/Config.in
+++ b/package/lrd/lrd-wb50legacy-radio/msd-binaries/Config.in
@@ -3,56 +3,57 @@ config BR2_PACKAGE_MSD_BINARIES
 	select BR2_PACKAGE_LIBNL
 	depends on BR2_LRD_WB50N_LEGACY_RADIO
 	help
-      Extracts the Laird closed source binaries from an msd release and install them on the target.
-      (sdcsupp, sdcsdk, sdc_cli, etc)
+	  Extracts the Laird closed source binaries from an msd release and install them on the target.
+	  (sdcsupp, sdcsdk, sdc_cli, etc)
 
 if BR2_PACKAGE_MSD_BINARIES
 
-config BR2_MSD_BINARIES_COMPANY_PROJECT
+config BR2_PACKAGE_MSD_BINARIES_COMPANY_PROJECT
 	string "Laird Binaries company/project string"
+	default "laird"
 	help
 	  Specify the middle string of a msd name tag. I.e. company/project.
 	  E.g. laird
 
-config BR2_MSD_BINARIES_WEBLCM
+config BR2_PACKAGE_MSD_BINARIES_WEBLCM
 	bool "Laird webLCM"
     default y
 	help
 	  Install the webLCM from the MSD package.
 
-config BR2_MSD_BINARIES_EVENTMON
+config BR2_PACKAGE_MSD_BINARIES_EVENTMON
 	bool "Laird event monitor"
     default y
 	help
 	  Install the eventmon from the MSD package.
 
-config BR2_MSD_BINARIES_SDCCLI
+config BR2_PACKAGE_MSD_BINARIES_SDCCLI
 	bool "Laird SDC CLI"
 	select BR2_PACKAGE_LIBEDIT
     default y
 	help
 	  Install the SDC CLI from the MSD package.
 
-config BR2_MSD_BINARIES_SDCSUPP
+config BR2_PACKAGE_MSD_BINARIES_SDCSUPP
 	bool "Laird SDC Supplicant"
-    default y
+	default y
 	help
 	  Install the SDC Supplicant from the MSD package.
 
-config BR2_MSD_BINARIES_LLAGENT
+config BR2_PACKAGE_MSD_BINARIES_LLAGENT
 	bool "Laird Link agent"
-    default y
+	default n
 	help
 	  Install the Laird Link agent from the MSD package.
 
-config BR2_MSD_BINARIES_LAIRD_FIRMWARE_AR6004
+config BR2_PACKAGE_MSD_BINARIES_LAIRD_FIRMWARE_AR6004
 	bool "Laird 50-series"
 	default n
 	help
 	  Install Laird's AR6004 firmware and calibration data for the 50
 	  series radios.
 
-config BR2_MSD_BINARIES_LAIRD_FIRMWARE_BT
+config BR2_PACKAGE_MSD_BINARIES_LAIRD_FIRMWARE_BT
 	bool "Bluetopia"
 	default n
 	help
