--- a/package/lrd/lrd-wb50sysd-radio/wb50sysd-summit-supplicant-binaries/Config.in
+++ b/package/lrd/lrd-wb50sysd-radio/wb50sysd-summit-supplicant-binaries/Config.in
@@ -1,6 +1,6 @@
 config BR2_PACKAGE_WB50SYSD_SUMMIT_SUPPLICANT_BINARIES
 	bool "WB50SYSD Summit Supplicant ARM EABIHF Binaries Installer"
 	select BR2_PACKAGE_SDCSUPP if BR2_LRD_DEVEL_BUILD="y"
-	depends on (BR2_LRD_WB50N_SYSD_RADIO && !BR2_PACKAGE_LAIRD_OPENSSL_FIPS && !BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES) || (BR2_LRD_WB50N_SYSD_FIPS_RADIO && (BR2_PACKAGE_LAIRD_OPENSSL_FIPS || BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES))
+	depends on BR2_LRD_WB50N_SYSD_RADIO || BR2_LRD_WB50N_SYSD_FIPS_RADIO
 	help
 	  Extracts sdcsupp, wpa_cli binaries from summit supplicant release and install them on the target.
