Restructured legace wb50 builds, removed msd binaries
MSD binaries were removed. Componenets that used to be in MSD binary distributed as following:

- PHP SDK, WEB LCM and Eventmon will be compiled by customer from source (as these are Open Source components)
- Supplicant, SDC SDK and SDC CLI are included into the newly created summit_supplicant_legacy binary package
- Wi-Fi and Bluetooth firmware and Wireless Reg DB are now part ATH6004 firmware binary package

Bug 15019

--- a/configs/wb50n_legacy_defconfig
+++ b/configs/wb50n_legacy_defconfig
@@ -51,6 +51,7 @@ BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_EXT_ZIP=y
 BR2_PACKAGE_PHP_EXT_JSON=y
 BR2_PACKAGE_CRYPTODEV=y
+BR2_PACKAGE_LIBOPENSSL_1_0_2=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LIBGUDEV=y
 BR2_PACKAGE_LIBNDP=y
@@ -100,7 +101,6 @@ BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_VPNC=y
 BR2_PACKAGE_WGET=y
-BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_PACKAGE_KMOD_TOOLS=y
@@ -119,7 +119,8 @@ BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
 BR2_TARGET_UBOOT_BOARDNAME="wb50n"
 BR2_LRD_WB50N_LEGACY_RADIO=y
-BR2_PACKAGE_OPENSSL_FIPS=y
+BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_PHP_SDK=y
 BR2_PACKAGE_DCAS=y
 BR2_PACKAGE_LRD_LEGACY=y
+BR2_PACKAGE_WEB_LCM=y
