--- a/package/lrd-closed-source/sdccli/Config.in
+++ b/package/lrd-closed-source/sdccli/Config.in
@@ -1,6 +1,8 @@
 config BR2_PACKAGE_SDCCLI
 	bool "SDC CLI"
 	select BR2_PACKAGE_LIBNL
+	select BR2_PACKAGE_LIBEDIT
+	select BR2_PACKAGE_SDCSDK
 	help
 	  SDC CLI
 
