--- a/package/lrd-closed-source/sdcsupp/Config.in
+++ b/package/lrd-closed-source/sdcsupp/Config.in
@@ -1,7 +1,7 @@
 config BR2_PACKAGE_SDCSUPP
 	bool "SDC Supplicant"
 	select BR2_PACKAGE_LIBNL
-	help 
+	help
 	  SDC Supplicant
 
 if BR2_PACKAGE_SDCSUPP
@@ -10,5 +10,8 @@ config BR2_PACKAGE_SDCSUPP_WPA_CLI
 	bool "Install wpa_cli binary"
 	help
 	  Install wpa_cli command line utility
+
+config BR2_PACKAGE_SDCSUPP_LEGACY
+	bool "SDC Supplicant Legacy"
 
 endif
