Add new package lrd-userspace-examples
Bug 14841

--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -22,3 +22,4 @@ source "package/lrd/lrd-encrypted-storage-toolkit/Config.in"
 source "package/lrd/igconfd/Config.in"
 source "package/lrd/lrd-bt-utils/Config.in"
 source "package/lrd/igupd/Config.in"
+source "package/lrd/lrd-userspace-examples/Config.in"
