Force to select BR2_PACKAGE_SDCSDK for reg50 and summit legacy targets
sdccli package now depends but not select sdcsdk due to the new sdcsdk_nm.

Bug 15068

--- a/configs/summit_supplicant_legacy-arm-eabi_defconfig
+++ b/configs/summit_supplicant_legacy-arm-eabi_defconfig
@@ -21,6 +21,7 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="summit_supplicant_legacy-arm-eabi"
 BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LIBOPENSSL_1_0_2=y
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_PACKAGE_SDCSDK=y
 BR2_PACKAGE_SDCCLI=y
 BR2_PACKAGE_SDCSUPP=y
 BR2_PACKAGE_SDCSUPP_LEGACY=y
