--- a/configs/reg50n-arm-eabihf_defconfig
+++ b/configs/reg50n-arm-eabihf_defconfig
@@ -23,6 +23,7 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="reg50n-arm-eabihf"
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_OPENSSL=y
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_PACKAGE_SDCSDK=y
 BR2_PACKAGE_SDCCLI=y
 BR2_PACKAGE_SDCCLI_SMU_CLI=y
 BR2_PACKAGE_AR6KL_TOOLS=y
