Added FIPS integrity check to build
Bug 14364

--- a/board/laird/wb50n_sysd/rootfs-additions/etc/bluetooth/main.conf
+++ b/board/laird/wb50n_sysd/rootfs-additions/etc/bluetooth/main.conf
@@ -2,7 +2,7 @@
 
 # Default adaper name
 # Defaults to 'BlueZ X.YZ'
-Name = Laird-WB50-RDVK
+Name = Laird-WB50
 
 # Default device class. Only the major and minor device class bits are
 # considered. Defaults to '0x000000'.
@@ -71,7 +71,24 @@ ReverseServiceDiscovery = false
 # Defaults to "off"
 # Privacy = off
 
-#[Policy]
+[GATT]
+# GATT attribute cache.
+# Possible values:
+# always: Always cache attributes even for devices not paired, this is
+# recommended as it is best for interoperability, with more consistent
+# reconnection times and enables proper tracking of notifications for all
+# devices.
+# yes: Only cache attributes of paired devices.
+# no: Never cache attributes
+# Default: always
+#Cache = always
+
+# Minimum required Encryption Key Size for accessing secured characteristics.
+# Possible values: 0 and 7-16. 0 means don't care.
+# Defaults to 0
+# MinEncKeySize = 0
+
+[Policy]
 #
 # The ReconnectUUIDs defines the set of remote services that should try
 # to be reconnected to in case of a link loss (link supervision
