--- a/configs/wb50nsd_sysd_fips_defconfig
+++ b/configs/wb50nsd_sysd_fips_defconfig
@@ -8,6 +8,7 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_OPTIMIZE_3=y
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/wb50n_sysd/wb50n_sysd_fips-local.mk"
+BR2_REPRODUCIBLE=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
 BR2_TARGET_GENERIC_HOSTNAME="summit"
@@ -101,7 +102,6 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_LRD_WB50N_SYSD_FIPS_RADIO=y
-BR2_PACKAGE_FIPS_CHECK=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
