--- a/board/laird/som60/rootfs-additions/etc/bluetooth/main.conf
+++ b/board/laird/som60/rootfs-additions/etc/bluetooth/main.conf
@@ -1,8 +1,8 @@
 [General]
 
-# Default adapter name
+# Default adaper name
 # Defaults to 'BlueZ X.YZ'
-#Name = BlueZ
+Name = Laird-SOM60
 
 # Default device class. Only the major and minor device class bits are
 # considered. Defaults to '0x000000'.
@@ -17,6 +17,12 @@
 # The value is in seconds. Default is 0.
 # 0 = disable timer, i.e. stay pairable forever
 #PairableTimeout = 0
+
+# Automatic connection for bonded devices driven by platform/user events.
+# If a platform plugin uses this mechanism, automatic connections will be
+# enabled during the interval defined below. Initially, this feature
+# intends to be used to establish connections to ATT channels. Default is 60.
+#AutoConnectTimeout = 60
 
 # Use vendor id source (assigner), vendor, product and version information for
 # DID profile support. The values are separated by ":" and assigner, VID, PID
