Added FIPS integrity check to build
Bug 14364

--- a/configs/som60sd_fips_defconfig
+++ b/configs/som60sd_fips_defconfig
@@ -8,6 +8,7 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_OPTIMIZE_3=y
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/som60/som60_fips-local.mk"
+BR2_REPRODUCIBLE=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
 BR2_TARGET_GENERIC_HOSTNAME="summit"
@@ -53,7 +54,6 @@ BR2_PACKAGE_JSON_C=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBTIRPC=y
 BR2_PACKAGE_GOBJECT_INTROSPECTION=y
-BR2_PACKAGE_LIBDAEMON=y
 BR2_PACKAGE_LIBEDIT=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
@@ -115,7 +115,6 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
 BR2_LRD_SOM60_FIPS_RADIO=y
 BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE="7.0.0.139"
-BR2_PACKAGE_FIPS_CHECK=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
