Added test harnesses to FIPS builds
Bug 14364

--- a/configs/wb50n_sysd_fips_defconfig
+++ b/configs/wb50n_sysd_fips_defconfig
@@ -110,3 +110,6 @@ BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 BR2_PACKAGE_LRD_USBGADGET=y
 BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
+BR2_PACKAGE_KCAPI_CAVS=y
+BR2_PACKAGE_PARSER_CAVS=y
+BR2_PACKAGE_OPENSSL_TESTING=y
