--- a/configs/wb50nsd_sysd_fips_defconfig
+++ b/configs/wb50nsd_sysd_fips_defconfig
@@ -104,3 +104,6 @@ BR2_PACKAGE_LRD_NETWORK_MANAGER=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_KCAPI_CAVS=y
+BR2_PACKAGE_PARSER_CAVS=y
+BR2_PACKAGE_OPENSSL_TESTING=y
