Firmware update by weblcm-python
Using swupdate client API. swupdate client library needs to be installed.

sw-description should only contain description of images to be installed.

Bug 13442

--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -23,3 +23,4 @@ source "package/lrd/lrd-bt-utils/Config.in"
 source "package/lrd/igupd/Config.in"
 source "package/lrd/lrd-userspace-examples/Config.in"
 source "package/lrd/sdcsdk_nm/Config.in"
+source "package/lrd/lrd-swupdate-client/Config.in"
