--- a/package/lrd/weblcm-python/Config.in
+++ b/package/lrd/weblcm-python/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_WEBLCM_PYTHON
 	help
 	  Laird Web Configuration Utility
 	depends on BR2_PACKAGE_PYTHON3
+	select BR2_PACKAGE_LRD_SWUPDATE_CLIENT
 	select BR2_PACKAGE_PYTHON_SYSTEMD
 	select BR2_PACKAGE_DBUS_PYTHON
 	select BR2_PACKAGE_PYTHON3_SSL
